# vector-graphics

./: .gitmodules  CMakeLists.txt  README.md
examples/: common.h  example1.c  example2.c
patterns/: blue16  blue32  blue64  blue8
src/: bezier.h  bounding_box.h  curve.h  exporter.h  filter.h  paint.h  path.h  quadratic.h  raster.h  shortcut_tree.h  util.h  vec.h
